force-app/main/default/objects/Account_Screening__c/Account_Screening__c.object-meta.xml
<CustomObject>
    <label>Account Screening</label>
    <nameField>
        <label>Account  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Screening</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>