force-app/main/default/objects/Account_Screening__c/fields/GTC_Screen_Status__c.field-meta.xml
<CustomField>
    <fullName>GTC_Screen_Status__c</fullName>
    <label>GTC Screen Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Denied Party List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>