force-app/main/default/objects/Account_Screening__c/fields/GTC_Screen_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>GTC_Screen_Status_Message__c</fullName>
    <label>GTC Screen Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>