force-app/main/default/objects/Account_Screening__c/fields/GTC_Screen_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>GTC_Screen_Timestamp__c</fullName>
    <label>GTC Screen Timestamp</label>
    <type>DateTime</type>
</CustomField>