force-app/main/default/objects/Account_Screening__c/fields/Screening_Action__c.field-meta.xml
<CustomField>
    <fullName>Screening_Action__c</fullName>
    <label>Screening Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Resend</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>