force-app/main/default/objects/Account_Screening__c/fields/Screening_Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Screening_Action_Status__c</fullName>
    <label>Screening Action Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>