force-app/main/default/objects/Account_Screening__c/fields/Screening_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Screening_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used for identity if the record is eligible for integration with MuleSoft.</description>
    <label>Screening Eligibility</label>
    <type>Checkbox</type>
</CustomField>