force-app/main/default/objects/Account_Screening__c/fields/Unique_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Parent_Id__c</fullName>
    <label>Unique Parent Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>