force-app/main/default/objects/Account_Screening__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Screening_Eligibility__c</columns>
    <columns>Screening_Action__c</columns>
    <columns>Screening_Action_Status__c</columns>
    <columns>GTC_Screen_Status__c</columns>
    <columns>GTC_Screen_Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>